--- a/WORDPLEASE/requirements.txt
+++ b/WORDPLEASE/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 decorator==4.2.1
 Django==2.0.1
 django-embed-video==1.1.2
+djangorestframework==3.7.7
 idna==2.6
 public==0.0.63
 pytz==2017.3
